[tool.poetry]
name = "pythoneda-git-repositories"
version = "0.0.1a5"
description = "Git repositories in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda/git-repositories"
packages = [{include = "pythonedagitrepositories"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a12"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
