[tool.poetry]
name = "pythoneda-git-python"
version = "0.0.1a9"
description = "Git repositories for Python projects"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda/git-python"
packages = [{include = "pythonedagitpython"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a15"
pythoneda-shared-git = "^0.0.1a1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
