[metadata]
name = pythoneda-git-repositories
version = 0.0.1a2
author = rydnr
author_email = github@acm-sl.org
description = Git repositories in PythonEDA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydnr/pythoneda-git-repositories
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = PythonEDAGitRepositories
python_requires = >=3.7

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests
